--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create markdown cell with title of the notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Science Tools and Ecosystem"
    ]
   },
@@ -27,7 +34,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a markdown cell for an introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insert a markdown cell to list Objectives"
    ]
   },
   {
@@ -48,12 +69,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a markdown cell to list data science languages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Some of the popular languages that Data Scientists use are:\n",
     "1. Python\n",
     "2. R\n",
     "3. Jupyter Notebook\n",
     "4. Java\n",
     "5. SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a markdown cell to list data science libraries"
    ]
   },
   {
@@ -72,6 +107,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a markdown cell with a table of Data Science tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "| Data Science Tools |\n",
     "|:------------------:|\n",
     "| Jupyter Notebook   |\n",
@@ -83,7 +125,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a markdown cell introducing arithmetic expression examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a code cell to multiply and add numbers"
    ]
   },
   {
@@ -105,8 +161,15 @@
     }
    ],
    "source": [
-    "# This a simple arithmetic expression to mutiply then add integers\n",
+    "# This a simple arithmetic expression to multiply then add integers\n",
     "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a code cell to convert minutes to hours"
    ]
   },
   {
@@ -136,6 +199,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a markdown cell to indicate the Author's name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Author\n",
     "Sumet (Ben) Viwatmanitsakul"
    ]
@@ -150,9 +220,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -164,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
